# Veritas

./: .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  config.example.toml  demo.sh  index.html  lake-manifest.json  lakefile.lean  pyproject.toml  requirements.txt  setup.sh
.claude/: settings.local.json
.gauss/: project.yaml
Veritas/: Main.lean  Types.lean
Veritas/Finance/: ExecutionQuality.lean  FloatAxioms.lean  Kelly.lean  MaxLoss.lean  PositionSizing.lean
Veritas/Gates/: Certificate.lean  ConstraintGate.lean  PortfolioGate.lean  SignalGate.lean  Types.lean
Veritas/Learning/: Reliability.lean
Veritas/Strategy/: BasisReversion.lean  ExitLogic.lean  FundingReversion.lean  LiquidationCascade.lean  Regime.lean  Registry.lean
docs/: POSITION_PAPER.md  PRODUCT_BRIEF.md  migration-plan-2026-04-23.md  prediction-market-NEXT.md  prediction-market-slice.md  var-audit-2026-04-23.md
docs/paper/: Makefile  README.md  veritas.tex
examples/external_integration/: README.md  (+3 more)
python/: __init__.py  attestation.py  bridge.py  executor.py  extractor.py  journal.py  main.py  observer.py  regime.py  schemas.py  sdk.py  verifier.py
tests/: demo_output.txt  test_aggregate_reliability.py  test_api_endpoints.py  test_api_foundation.py  test_attestation.py  test_basis_reversion.py  test_bypass_invariant.py  test_dashboard.py  test_gates.py  test_live_runner.py  test_loop.py  test_mcp_server.py  test_sdk_surface.py  test_sse.py  test_theorem_registry_pin.py
web/: build_static_demo.py  demo_verdicts.json  gen_demo_verdicts.py  index.html
(+21 files in other folders)
